--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     </properties>
 
     <dependencies>
+
+        <!-- servlet时代 -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -42,6 +44,14 @@
             <artifactId>logback-access</artifactId>
             <version>1.2.3</version>
         </dependency>
+
+        <!-- spring时代 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.8.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
