--- a/src/main/resources/factory.properties
+++ b/src/main/resources/factory.properties
@@ -1,3 +1,3 @@
-helloService=com.weison.service.HelloServiceImpl
-helloDaoImpl=com.weison.dao.HelloDaoImpl
-helloMysqlDaoImpl=com.weison.dao.HelloMysqlDaoImpl
+helloService=com.weison.original.service.HelloServiceImpl
+helloDaoImpl=com.weison.original.dao.HelloDaoImpl
+helloMysqlDaoImpl=com.weison.original.dao.HelloMysqlDaoImpl
