--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub WeisonWei Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/WeisonWei/spring</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
 
         <!-- servlet时代 -->
@@ -72,6 +80,13 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <!--plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>-->
         </plugins>
     </build>
 </project>
